Included 2nd css stylsheet in the html
Added css stylesheet (copy) in the html and copied the body into the correct css stylesheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@ body {
 font-family: 'Roboto', sans-serif;
 	color: #F000000;
 }
+div.body {
+	background-image: url("../images/bs_pic_musclepower.jpg"); 
+	background-size: cover;
+	background-repeat: no-repeat;
+font-family: 'Roboto', sans-serif;
+	color: #F000000;
+}
 }
 div.container{
 	color: white;
