--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
 font-family: 'Roboto', sans-serif;
 	color: #F000000;
 }
-div.body {
+body {
 	background-image: url("../images/bs_pic_musclepower.jpg"); 
 	background-size: cover;
 	background-repeat: no-repeat;
