--- a/css/styles-copy.css
+++ b/css/styles-copy.css
@@ -3,13 +3,15 @@
 	padding: 0;
 }
 
-body {
+div.body {
 	background-image: url("../images/bs_pic_musclepower.jpg"); 
 	background-size: cover;
 	background-repeat: no-repeat;
 font-family: 'Roboto', sans-serif;
 	color: #F000000;
 }
+
+
 div.container{
 	color: white;
 	text-align: center;
