--- a/css/styles-copy.css
+++ b/css/styles-copy.css
@@ -3,6 +3,7 @@
 	padding: 0;
 }
 
+.signup
 body {
 	background-image: url("../images/bs_pic_musclepower.jpg"); 
 	background-size: cover;
@@ -26,6 +27,7 @@ div.container{
 }
 
 
+.signup1
 p {
 	font-size: 20px;
 	text-align: left;
