--- a/css/styles-copy.css
+++ b/css/styles-copy.css
@@ -3,8 +3,8 @@
 	padding: 0;
 }
 
-.signup
-body {
+.signup{
+
 	background-image: url("../images/bs_pic_musclepower.jpg"); 
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -35,6 +35,8 @@ p {
 	margin-left: 50px;
 }
 
+
+.signup2
 h1 {
 	font-size: 60px;
 	text-align: center;
